<resources>
    <string name="app_name" translatable="false">S1 Next Goose</string>
    <string name="app_icon_content_desc">App icon</string>
    <string name="leak_canary_display_activity_label" translatable="false">S1 Next Goose Leaks</string>
    <string name="intent_title_which_view_application">Open with</string>
    <string name="message_chooser_no_applications">No apps can perform this action</string>
    <string name="action_login">Sign in</string>
    <string name="action_app_login">Sign in magic</string>
    <string name="avatar_content_desc">Avatar</string>
    <string name="picture_content_desc">Picture</string>
    <string name="dialog_message_login_prompt">Please sign in first.</string>
    <string name="dialog_button_text_done">Done</string>
    <string name="dialog_button_text_go">Go</string>
    <string name="message_network_error">There was a network error</string>
    <string name="message_server_connect_error">Unable to connect to the server, please try again later.</string>
    <string name="message_server_data_error">Server data parse error</string>
    <string name="drawer_top_background_content_desc">background</string>
    <string name="drawer_avatar_content_desc">User avatar</string>
    <string name="dialog_message_log_out">Sign out?</string>
    <string name="dialog_button_text_log_out">Sign out</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="advise">Have advice</string>
    <string name="donate">Donate</string>
    <string name="format_error">Format error</string>
    <string name="title_copied">Title copied</string>
    <string name="show_image">Show image</string>
    <string name="go_url">Go url</string>
    <string name="stop">Stop</string>
    <string name="stop_confirm">Sure stop?</string>
    <string name="data_load_from_cache">Data load from cache</string>
    <string name="menu_account_new">Create account</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_browser">Open in browser</string>
    <string name="menu_thread_go">Go to thread</string>
    <string name="menu_sub_forums" translatable="false">子版块</string>
    <string name="menu_favourites_add">Add to favourites</string>
    <string name="menu_link">Link</string>
    <string name="menu_share">Share</string>
    <string name="menu_title_share">Share via</string>
    <string name="post_share_selected_count">Selected %1$d floor(s)</string>
    <string name="post_share_no_data">No loaded floors to share</string>
    <string name="post_share_at_least_one">Select at least one floor</string>
    <string name="post_share_generating">Generating share image…</string>
    <string name="post_share_image_failed">Could not generate share image</string>
    <string name="post_share_from_stage1">From Stage1 Forum</string>
    <string name="post_share_code">Search code: %1$s</string>
    <string name="post_share_preview_title">Share preview</string>
    <string name="post_share_scan_hint">Scan to view this thread</string>
    <string name="post_share_detail_line">Thread %1$s · Page %2$d · #%3$s</string>
    <string name="post_share_slogan">Share Stage1 posts</string>
    <string name="post_share_brand_title">%1$s 鹅球</string>
    <string name="post_share_brand_slogan">更好的鹅球</string>
    <string name="post_share_brand_slogan_prefix">更好的</string>
    <string name="post_share_brand_slogan_suffix">球</string>
    <string name="post_share_qr_content_desc">QR code</string>
    <string name="menu_thread_attachment">Attachment</string>
    <string name="menu_emoticon">Emoticon</string>
    <string name="menu_keyboard">Keyboard</string>
    <string name="menu_send">Send</string>
    <string name="menu_download">Download</string>
    <string name="menu_copy_link">Copy link</string>
    <string name="menu_blacklist_add">Add to blacklist</string>
    <string name="menu_refresh_avatar">Refresh avatar</string>
    <string name="menu_search">Search</string>
    <string name="menu_search_current_page">Search page</string>
    <string name="activity_label_login" translatable="false">@string/action_login</string>
    <string name="prompt_username">Username/UID/Email</string>
    <string name="prompt_password">Password</string>
    <string name="choose_user">Choose User</string>
    <string name="choose_user_invalid">User is invalid, please choose other user</string>
    <string name="error_field_required">Can\'t leave this empty</string>
    <string name="dialog_progress_message_login">Signing in…</string>
    <string name="toolbar_spinner_drop_down_all_forums_item_title" translatable="false">全部</string>
    <string name="thread_permission_hint" translatable="false">阅读权限</string>
    <string name="menu_post_disable_sticky">Disable sticky</string>
    <string name="original_poster">OP</string>
    <string name="only_see_him">Only see him</string>
    <string name="dialog_button_text_add">Add</string>
    <string name="dialog_progress_message_favourites_add">Adding…</string>
    <string name="prompt_remark">Remark</string>
    <string name="dialog_message_invalid_or_unsupported_link">Invalid or unsupported link.</string>
    <string name="dialog_button_text_use_a_different_app">Use a different app</string>
    <string name="dialog_message_processing">Processing…</string>
    <string name="dialog_message_quote_not_found">This post could not be found.</string>
    <string name="post_page_search_hint">Search current page</string>
    <string name="post_page_search_empty_query">Enter search text</string>
    <string name="post_page_search_no_data">Current page is not loaded yet</string>
    <string name="post_page_search_no_results">No results for “%1$s” on this page</string>
    <string name="post_page_search_results_title">%1$d results for “%2$s”</string>
    <string name="post_page_search_jump_message">Jumped to %1$s (%2$d/%3$d)</string>
    <string name="post_page_search_result_floor">P%1$d %2$s</string>
    <string name="post_page_search_scope_current">Search current page only</string>
    <string name="post_page_search_scope_current_hint">Scope: page %1$d</string>
    <string name="post_page_search_scope_cached">Search cached pages in this thread</string>
    <string name="post_page_search_scope_cached_hint">Scope: locally cached pages; results may jump to another page</string>
    <string name="post_page_search_scope_cached_hint_loaded">Scope: %1$d locally cached pages; results may jump to another page</string>
    <string name="post_backup_success">Thread backup complete</string>
    <string name="image_upload_options_title">Image upload settings</string>
    <string name="image_upload_options_summary">%1$s · %2$s</string>
    <string name="image_upload_source_forum_attachment">Forum attachment upload</string>
    <string name="image_upload_source_forum_attachment_hint">Insert as a forum attachment and submit through the web form</string>
    <string name="image_upload_source_external">External image host</string>
    <string name="image_upload_source_external_hint">Insert as a normal image URL from the external image host</string>
    <string name="image_upload_original_resolution">Original resolution</string>
    <string name="image_upload_original_resolution_hint">Off: limit 2000</string>
    <string name="image_upload_limit_large_resolution">Limit 2000</string>
    <string name="image_upload_limit_large_resolution_hint">Scale down when either side exceeds 2000 px</string>
    <string name="image_upload_forum_attachment_used">This image is used in the post body</string>
    <string name="prompt_thread_link_or_id">Thread link/ID</string>
    <string name="error_field_invalid_or_unsupported_thread_link_or_id">Invalid or unsupported link/ID format</string>
    <string name="message_link_copied">Link copied to clipboard</string>
    <string name="reply_activity_title_prefix" translatable="false">"回复主题 - "</string>
    <string name="reply_activity_quote_title_prefix" translatable="false">"引用#%1$s - "</string>
    <string name="prompt_reply">Write something…</string>
    <string name="prompt_title">Write title…</string>
    <string name="signature">— from &lt;a href=\"%1$s\">S1 Next Goose&lt;/a> v%2$s</string>
    <string name="signature_with_device_info">— from %1$s, &lt;a href=\"%2$s\">S1 Next Goose&lt;/a> v%3$s</string>
    <string name="signature_in_reply">— from [url=%1$s]S1 Next Goose[/url] v%2$s</string>
    <string name="signature_in_reply_with_device_info">— from %1$s, [url=%2$s]S1 Next Goose[/url] v%3$s</string>
    <string name="dialog_progress_message_reply">Replying…</string>
    <string name="dialog_message_reply_discard_prompt">Do you want to discard this replies?</string>
    <string name="dialog_message_text_discard">Discard</string>
    <string name="emoticon_face" translatable="false">麻将脸</string>
    <string name="emoticon_carton" translatable="false">动漫</string>
    <string name="emoticon_animal" translatable="false">动物</string>
    <string name="emoticon_device" translatable="false">硬件</string>
    <string name="emoticon_goose" translatable="false">鹅</string>
    <string name="emoticon_bundam" translatable="false">高达</string>
    <string name="snackbar_action_downloading">Downloading…</string>
    <string name="menu_view_in_google_play_store">View in Google Play Store</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="menu_version_info">Version info</string>
    <string name="version">Version %1$s-%2$s</string>
    <string name="copyright" translatable="false">&#169;2018 ykrank</string>
    <string name="user_in_blacklist">User in blacklist</string>
    <string name="word_in_black_word">Word in black word</string>
    <string name="blacklist_authorid">Author id</string>
    <string name="blacklist_author_name">Author name</string>
    <string name="blacklist_forum_flag">Forum flag</string>
    <string name="blacklist_post_flag">Post flag</string>
    <string name="blacklist_add_time">Add time</string>
    <string name="blacklist_flag_normal">Normal</string>
    <string name="blacklist_flag_hide">Hide</string>
    <string name="blacklist_flag_del">Del</string>
    <string name="menu_blacklist_remove">Remove from blacklist</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_add">Add</string>
    <string name="menu_all">All</string>
    <string name="menu_clear">Clear</string>
    <string name="blacklist_refresh_warn">Blacklist changed, please refresh</string>
    <string name="blacklist_hide_forum">Hide forum</string>
    <string name="blacklist_hide_post">Hide post</string>
    <string name="prompt_author_id">Author id</string>
    <string name="prompt_author_name">Author name</string>
    <string name="prompt_black_word">Black word</string>
    <string name="status">Status</string>
    <string name="post_action_copy">Copy</string>
    <string name="post_action_feedback">Feedback</string>
    <string name="user_combat_effectiveness">Combat effectiveness</string>
    <string name="reply">Reply</string>
    <string name="rate">Rate</string>
    <string name="menu_report">Report</string>
    <string name="score_region">Score region</string>
    <string name="score_today_left">Today left score</string>
    <string name="score_reason">Score reason</string>
    <string name="prompt_reason">Write reason</string>
    <string name="notice_author">Notice author</string>
    <string name="score_reason_example">Score reason example</string>
    <string name="click_to_trade_html">ClickToTradeHtml</string>
    <string name="click_to_cast_dark_magic">CLICK TO CAST DARK MAGIC</string>
    <string name="click_to_vote">Click to vote</string>
    <string name="view_all">View all</string>
    <string name="black_word_verify">Verify black word</string>
</resources>