<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_popup_reply"
        android:orderInCategory="31"
        android:title="@string/reply"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_popup_rate"
        android:orderInCategory="31"
        android:title="@string/rate"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_popup_edit"
        android:orderInCategory="31"
        android:title="@string/menu_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_popup_report"
        android:orderInCategory="31"
        android:title="@string/menu_report"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_popup_copy"
        android:orderInCategory="32"
        android:title="@string/post_action_copy"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_popup_share"
        android:orderInCategory="33"
        android:title="@string/menu_share"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_popup_feedback"
        android:orderInCategory="34"
        android:title="@string/post_action_feedback"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
