<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="me.ykrank.s1next.view.page.setting.blacklist.BlackWordDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="@dimen/dialog_padding"
        android:paddingLeft="@dimen/dialog_padding"
        android:paddingTop="@dimen/dialog_padding"
        android:paddingEnd="@dimen/dialog_padding"
        android:paddingRight="@dimen/dialog_padding"
        android:paddingBottom="@dimen/dialog_padding_bottom">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_black_word"
                android:imeActionId="@integer/ime_action_id"
                android:imeActionLabel="@string/dialog_button_text_go"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:gravity="center"
            android:text="@string/status"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_word" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:entries="@array/black_list_stat_entry_values"
            app:layout_constraintBottom_toBottomOf="@id/tv_status"
            app:layout_constraintStart_toEndOf="@id/tv_status"
            app:layout_constraintTop_toTopOf="@id/tv_status" />

        <Button
            android:id="@+id/btn_verify"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_big"
            android:text="@string/black_word_verify"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_status" />

        <FrameLayout
            android:id="@+id/float_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:attr/colorBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/loading_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:progress="50" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
